fixed image overflowing on mobile

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -83,6 +83,7 @@ a:link, a:visited {
     .placeholder {
         height: 100%;
         width: 100%;
+        overflow: hidden;
     }
 
     .loading {
